CSS: fix header overlap interfering with navbar links.

--- a/_static/css/code.css
+++ b/_static/css/code.css
@@ -147,7 +147,7 @@ div.header {
 	font: 400 14px/22px "Noto Sans",Arial,sans-serif
 }
 h1.heading {
-	height: 100%
+	height: calc(100% - 15px)
 }
 h1.heading > a {
 	position: relative;
